--- a/hfplayerkenerl/build.gradle
+++ b/hfplayerkenerl/build.gradle
@@ -1,12 +1,16 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+}
 
 android {
-    compileSdkVersion 30
+    namespace 'com.hf.playerkernel'
+
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0.0"
 
@@ -29,16 +33,20 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 }
 
 
 dependencies {
     api fileTree(dir: "libs", include: ['*.jar','*.aar'])
     api 'androidx.appcompat:appcompat:1.2.0'
-    api 'androidx.media:media:1.2.1'
+    api 'androidx.media:media:1.6.0'
 
-    api "androidx.core:core-ktx:+"
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "androidx.core:core-ktx:1.9.0"
+//    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     api 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
 }
